--- a/res/menu/items.xml
+++ b/res/menu/items.xml
@@ -8,7 +8,7 @@
         android:title="@string/action_settings">
         <menu>
             <item
-                android:id="@+id/phone"
+                android:id="@+id/info"
                 android:showAsAction="never"
                 android:title="@string/more_information"/>
         </menu>
