--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -97,6 +97,7 @@
         android:id="@+id/seekBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:max="100" />
+        android:max="100"
+        android:progress="1" />
 
 </LinearLayout>
